--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "description": "",
   "devDependencies": {
     "lite-server": "^2.6.1",
-    "typescript": "^5.5.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
